<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorDark"
    tools:context=".Intro2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDark"
        android:orientation="vertical">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="196dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="40dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:text="@string/intro2"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="25dp"/>

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/next"/>

        <Button
            android:id="@+id/buttonPrevious"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/previous"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>