<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DuvidaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDark"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="160dp"
            android:layout_gravity="center"
            android:src="@mipmap/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duvida"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:textSize="30dp"
            android:textColor="@color/colorSecundary"
            android:textFontWeight="50"
        />

        <EditText
            android:id="@+id/duvida"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/campoDuvida"
        />

        <Button
            android:id="@+id/consultar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/consultar"
        />



    </LinearLayout>>

</androidx.constraintlayout.widget.ConstraintLayout>